--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@
 .idea/**/gradle.xml
 .idea/**/libraries
 
-.idea
-.iml
+*.idea
+*.iml
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
